<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <variable
        name="title"
        type="java.lang.String"
        />
    <variable
        name="text"
        type="java.lang.String"
        />
  </data>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:gravity="center|left"
        android:maxHeight="400dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@{title}"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/url_hint"
        android:lineSpacingMultiplier="1.2"
        android:text="@={text}"
        android:textColor="#000"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/cancel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/cancel"
          style="?buttonBarButtonStyle"
          />

      <Button
          android:id="@+id/enter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/enter"
          style="?buttonBarButtonStyle"
          />

    </LinearLayout>


  </LinearLayout>
</layout>